# ChangeLog for app-emulation/libcgroup
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +libcgroup-0.34.ebuild,
  +files/cgred, +metadata.xml:
  initial commit
