@@ -1,5 +1,9 @@
+AUX cgconfig.init 196 RMD160 482cfdc8c1c68764c3bcf9c569d0432f502d443f SHA1 5d7c64d6f5ec55d6576d3b53ba2629c86d5cb0d7 SHA256 a63137aaec753302a71f43a0c08845a150488c368dc1a8d0fde3db4f82311ef5
 AUX cgred 550 RMD160 43dfe7be802944490a65a6d7cbac34b905202b96 SHA1 8299879d57682db9e627573f67bff04cdc11c6dd SHA256 ad5c20c9d8d298d107260d433e950882de5fb8f1d9300a70603bd36be4b57489
+AUX cgred.confd 758 RMD160 9dc8ca06d56077034a2fd5cf7efea50b40ef6f07 SHA1 7b1d8bf5fe2961aecfcb18ecce9bfb30a944beed SHA256 1a9d604f1f6610f510f07ec821c1e42ad13624d89fd77162ce6a3cce567ad8ec
+AUX cgred.init 550 RMD160 43dfe7be802944490a65a6d7cbac34b905202b96 SHA1 8299879d57682db9e627573f67bff04cdc11c6dd SHA256 ad5c20c9d8d298d107260d433e950882de5fb8f1d9300a70603bd36be4b57489
 DIST libcgroup-0.34.tar.bz2 353532 RMD160 d04e23eeacbc3f26be6d110b78c69b5c97f3d576 SHA1 acf90b41d67826e76e397a0129aa83faa21c8483 SHA256 24950ae8e22aab0e1ae11d28f903dbfef1b17ee4f936e99a04bf5e6551caece3
+EBUILD libcgroup-0.34-r1.ebuild 1377 RMD160 2bc76e11d27dcf94646421aa371a1e1856c868ac SHA1 12dd305ee892b4136a1fb73314028823c5f49f3e SHA256 5fa52fd4e1588013ad8b439a25d9f92f5a278cf411f9959329eac5b674bffa25
 EBUILD libcgroup-0.34.ebuild 1145 RMD160 cb4e1bb37f0a0d90ce0c67678d52ed846764d77e SHA1 17e6928c3e361ce726f881541bb368d36e99b766 SHA256 e9b8051dec54c0345d1d1e1362905b8d4549ab97da61767321ddf7d32ec105cb
 MISC ChangeLog 250 RMD160 69314700e4094c29c59e68081d2966c74904642d SHA1 ccad94af97cdcdf29ed027b94d43ce157408e5e1 SHA256 48a0a2b07dce935e7d24d807ef1a985cd8010887b7b07b454df878eafe7dd1ba
-MISC metadata.xml 426 RMD160 865f083d25de027265da36619f4587a13d8106b6 SHA1 3b792d02e7c9c51bf5275a862141d0afdf0b5e3a SHA256 d7ea22f96963fbf741de36c351a59a9731dfccb3af6a7921f4490f85f9226817
+MISC metadata.xml 588 RMD160 f842fd0b45896402da1ecf1e7cf46dda25b2c7ae SHA1 59391e0aafb7f7721534dbca8ef340b8334e3277 SHA256 9a84c6ce22f18eac29c16b21e4222ab6c2760f54bb60226a65510ee1ed319289
