@@ -1,0 +1,20 @@
+#!/sbin/runscript
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+depend() {
+
+}
+
+start() {
+
+}
+
+stop() {
+
+}
+
+restart() {
+
+}
