@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Jan 2010; <slep@gentoo.org> +libcgroup-0.34-r1.ebuild,
+  +files/cgconfig.init, +files/cgred.confd, +files/cgred.init, metadata.xml:
+  bump ebuild add daemon
+
   21 Jan 2010; A. Vinogradov <spamslepnoga@inbox.ru> +libcgroup-0.34.ebuild,
   +files/cgred, +metadata.xml:
   initial commit
